# pragpack

./: CMakeLists.txt  LICENSE  README.md
pragpack/: CMakeLists.txt  pragpack.h
test/: CMakeLists.txt  pragpack_tests.cpp  pragpack_tests.h  test.cpp
